# WoW-Blizzard-API

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci_wow_blizzard.yml
dags/: wow_pvp_full_pipeline_dag.py
src/tp2025/blizzard_api/: auth_client.py  endpoints.py
src/tp2025/io/: load_localdb.py
src/tp2025/jobs/: build_chinfo_cur.py  build_leaderboard_cur.py  extract_chinfo_to_landing.py  extract_leaderboard_to_landing.py  load_chinfo_raw_to_db.py  load_leaderboard_raw_to_db.py  load_warehouse_redshift.py
src/tp2025/services/: ch_profile_client.py  character_selection.py
src/tp2025/transforms/: transform_chinfo.py  transform_leaderboard.py
src/tp2025/warehouse/: connect_redshift.py  redshift_model.py
tests/: test_auth_client.py  test_t_chinfo.py  test_t_leaderboard.py
