[project]
name = "blizzard"
version = "0.1.0"
description = "Blizzard API Pipeline"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.3.3",
    "pathlib>=1.0.1",
    "pyarrow>=22.0.0",
    "pytest>=9.0.1",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.44",
]
